[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sha256bit_matic"
version = "0.0.1"
authors = [
  { name="Sebastien Riou", email="" },
]
description = "SHA256 with bit granularity for message input length"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sebastien-riou/sha256bit"
"Bug Tracker" = "https://github.com/sebastien-riou/sha256bit/issues"