[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[project]
name = "sha256bit"
dynamic = ["version"]
authors = [
  { name="Sebastien Riou", email="" },
]
description = "SHA256 with bit granularity for message input length"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sebastien-riou/sha256bit"
"Bug Tracker" = "https://github.com/sebastien-riou/sha256bit/issues"

